<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mouna.inscriptionandconnection.myapplication.DetaillActivity"
    tools:showIn="@layout/activity_detaill"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/content_r2"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <com.pkmmte.view.CircularImageView
            android:id="@+id/imgDetaille"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/girl"
            app:border="true"

            app:border_color="#EEEEEE"
            app:border_width="2dp" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/textSiteName"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/img" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/fab_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/link"
                    android:id="@+id/imageViewLinkAdd"

                    android:layout_weight="0.27" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:hint="@string/lien"
                    android:textColor="@color/colorPrimary"
                    android:ems="10"
                    android:id="@+id/editTextLinkAff"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/login"
                    android:id="@+id/imageViewAdd"

                    android:layout_weight="0.27" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:hint="@string/login"
                    android:ems="10"
                    android:id="@+id/editTextAff"
                    android:layout_weight="1" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/mail"
                    android:id="@+id/imageEmailAff"

                    android:layout_weight="0.26" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:hint="@string/email"
                    android:id="@+id/editTextEmailAff"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/imagepasswrdAdd"
                    android:layout_width="32dp"
                    android:layout_height="32dp"

                    android:src="@drawable/mdp" />

                <TextView
                    android:layout_width="217dp"
                    android:layout_height="match_parent"
                    android:hint="@string/motDP"
                    android:ems="10"
                    android:id="@+id/editPasswdAff"
                    android:layout_weight="0.68" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.36"

                    android:paddingLeft="0dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/imageDateAff"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/date" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:hint="@string/dateModif"
                    android:ems="10"
                    android:id="@+id/editDateAff" />



            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
