<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.imen.myapplication.ConfigActivity"
    tools:showIn="@layout/activity_config">

        <RelativeLayout
            android:id="@+id/content_r2"
            android:layout_width="match_parent"
            android:layout_height="164dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp"
            android:background="@color/colorPrimary">

            <com.pkmmte.view.CircularImageView
                android:id="@+id/imgM"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/girl"
                app:border="true"

                app:border_color="#EEEEEE"
                app:border_width="2dp" />

            <TextView
                android:id="@+id/textSiteNameM"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignEnd="@+id/imgM"
                android:layout_alignLeft="@+id/imgM"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/imgM"
                android:layout_alignStart="@+id/imgM"
                android:layout_below="@+id/imgM"
                android:hint="@string/NomSite"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />
        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/fab_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/link"
                        android:id="@+id/imageViewLinkAdd"
                        android:layout_weight="0.27" />

                    <TextView
                        android:id="@+id/editTextLinkM"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/lien"
                        android:textSize="18sp"
                        android:textColor="@color/bleu"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/login"
                        android:id="@+id/imageViewAdd"

                        android:layout_weight="0.44" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:hint="@string/login"
                        android:ems="10"
                        android:id="@+id/editTextM"
                        android:layout_weight="1" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/mail"
                        android:id="@+id/imageEmailAdd"

                        android:layout_weight="0.43" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:hint="@string/email"
                        android:id="@+id/editTextMailM"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/imagepasswrdAdd"
                        android:layout_width="72dp"
                        android:layout_height="32dp"
                        android:src="@drawable/mdp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:hint="@string/motDP"
                        android:ems="10"
                        android:id="@+id/editPasswdM" />



                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:max="5"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/textViewM"
                        android:layout_width="145dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.98"
                        android:textAlignment="center"
                        android:visibility="invisible" />

                    <ImageButton
                        android:id="@+id/refresh"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="#fff"
                        android:visibility="invisible"

                        app:srcCompat="@android:drawable/btn_minus" />


                </LinearLayout>


                <Button
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Ajouter"
                    android:layout_marginLeft="115dp"
                    android:shadowRadius="0"
                    android:id="@+id/BAjout"/>



            </LinearLayout>
        </ScrollView>





</LinearLayout>
